--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="jeepo_background">jeepo_background</string>
     <string name="enter_distance">Enter Distance</string>
     <string name="calculate_fare">Calculate Fare</string>
+    <string name="location">Location:</string>
+    <string name="destination">Destination:</string>
 </resources>
